Fixed Routing with react-router-dom. Excellent results as of now. Things to change is the hamburger menu which works but lacks a visible icon

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .App {
   text-align: center;
   background-color: whitesmoke;
+  min-height: 100vh !important;
+}
+
+.Container {
+  position: relative;
+  min-height: 100vh !important;
+  height: auto;
 }
 
 .App-title {
