--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,7 +1,11 @@
-.App-header {
+.navbar {
   background-color: #323232;
   min-height: 60px;
   color: white;
   width: 100%;
   margin-bottom: 3%;
+}
+
+.navbar a {
+  color: white;
 }
